public/frontend/assets/css/style.css
/* ... */
.main-reviews__box {
    border: 1px solid #e4e4e4;
    padding: 1rem;
}

.main-reviews__details .tour-content__pra {
    margin-top: 0;
}

.main-reviews__details--remarks {
    display: flex;
    align-items: center;
    gap: 13px;
}

.main-reviews__details--remarks .tour-content__title {
    color: var(--color-primary);
    margin: 0;
}

.itinerary__map-title-main {
    display: flex;
    align-items: center;
    gap: 5px;
    font-size: 0.875rem;
    font-weight: 600;
    line-height: 1.25rem;
    color: #5e6d77;
    margin-top: 14px;
}

.itinerary__map-title-main i {
    display: flex;
    align-items: center;
}

ul.experience-itinerary-timeline {
    position: relative;
    padding-top: 0.5rem;
}

.timeline-item-stop {
    display: flex;
    /* align-items: center; */
    /* justify-content: center; */
    gap: 14px;
}

.timeline-item-info--primary {
    color: #1a2b49;
    margin-top: 0;
    margin-bottom: 0;
    font-size: 1.05rem;
    font-weight: 600;
    line-height: 1.4;
}

.timeline-item__subitems-wrapper {
    margin: 1.9rem 0 0.1rem;
}

p.timeline-item-info--secondary,
.timeline-item-info--secondary p,
p.timeline-subitems-info--secondary {
    margin: 0;
}

li.activity-itinerary-timeline__item {
    margin-bottom: 2.1rem;
}

.timeline-item-info--secondary {
    font-size: 15px;
    line-height: 1.5;
    color: #1a2b49;
    font-weight: inherit;
}

.activity-experience-map-wrapper {
    margin-left: 3.75rem;
}

.activity-experience__map {
    height: 70%;
}

span.timeline-item__icon {
    align-items: center;
    background-color: #ff4408;
    border: 2px solid #fff;
    border-radius: 100%;
    box-shadow:
        0 0 32px #0000000f,
        0 4px 8px #00000029;
    display: flex;
    height: 35px;
    justify-content: center;
    width: 35px;
    color: #fff;
    font-size: 19px;
}

.timeline-item__icon img {
    height: 17px;
    width: auto;
}

.timeline-item__icon {
    align-items: center;
    background-color: #ff4408;
    border: 2px solid #fff;
    border-radius: 50%;
    box-shadow:
        0 0 32px #0000000f,
        0 4px 8px #00000029;
    display: flex;
    height: 35px;
    justify-content: center;
    width: 48px;
}

.timeline-item__icon img {
    height: 17px;
    width: auto;
}

.experience-itinerary-timeline:before {
    left: 11.2px;
    position: absolute;
    top: 30px;
    width: 12px;
    content: "";
    height: 89%;
    background-color: #f53;
    z-index: -1;
    border-radius: 1rem;
}

.timeline-item__subitems-wrapper {
    display: flex;
}

.timeline-subitems-info--primary {
    margin-bottom: 2px;
    font-size: 0.825rem;
    font-weight: 600;
}

.timeline-subitems-info--secondary {
    font-size: 15px;
    color: #858995;
}

.grey-circle-icon {
    display: flex;
    width: 31px;
    aspect-ratio: 1 / 1;
    border: 2px solid #858995;
    border-radius: 100%;
    height: 31px;
    margin-right: 9px;
    box-shadow:
        0 0 32px #0000000f,
        0 4px 8px #00000029;
}

.timeline-item__staricon {
    background-color: #112c49 !important;
    border: none !important;
    color: #fff;
}

.timeline-item__staricon i {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 19px;
}

.tour-content_book_pricing {
    display: flex;
    align-items: center;
    gap: 0px 8px;
    font-size: 16px;
    font-weight: 500;
    flex-wrap: wrap;
    margin-bottom: 10px;
}

span.tour-content__title.ml-1 {
    display: flex;
    align-items: center;
    gap: 3px;
}

.tour-content_book__realPrice {
    font-size: 1.5rem;
}

.tour-content_book__realPrice {
    font-size: 1rem;
}

.ribbon {
    background: linear-gradient(180deg, #999 0, #ccc);
    color: #fff;
    display: block;
    -webkit-filter: drop-shadow(0 0.2rem 0.2em rgba(0, 0, 0, 0.5));
    font-size: 1em;
    font-weight: 700;
    height: 3rem;
    letter-spacing: -2px;
    line-height: 1.2em;
    padding-top: 0.5rem;
    position: relative;
    text-align: center;
    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);
    text-transform: uppercase;
    transform: translateZ(0);
    width: 3rem;
}

.ribbon.ribbon--red {
    background: linear-gradient(180deg, #d3362d 0, #e57368);
}

.ribbon.ribbon--red:after {
    border-left: 1.5rem solid transparent;
    border-right: 1.5rem solid transparent;
    content: "";
    height: 0;
    left: 0;
    position: absolute;
    top: 3rem;
    width: 0;
    border-top: 0.7rem solid #e57368;
}

.tour-content_book_app {
    position: relative;
    width: 100%;
    border: 1px solid #e4e4e4 !important;
    padding: 1rem 1.5rem 1.5rem;
    margin-bottom: 1.5rem;
}

.tour-content_book_app.sale {
    padding-top: 2rem;
    height: 100vh;
    position: relative;
    overflow-y: auto;
}
.sale-box {
    position: absolute;
    right: 15px;
    top: 0;
}

.nav-enquiry {
    align-items: center;
    justify-content: center;
    gap: 35px;
    text-transform: uppercase;
    background: #f9f9f9;
    display: flex;
    padding: 1.5rem;
    font-weight: 700;
    font-size: 15px;
    border-bottom: 1px solid #e4e4e4;
}

.enquiry-item.active {
    border-bottom: 1px solid #5191fa;
    color: #5191fa;
}

.form-book__pra {
    margin: 0;
}

.review-message {
    font-weight: 500;
}

.form-book__title {
    margin: 0;
    padding-bottom: 8px;
}

.form-book_content {
    padding: 0 0 0.25rem;
}

.form-group.form-guest-search {
    padding: 1.5rem 0 0;
    padding-top: 0;
}

.form-guest-search__details {
    border-bottom: 2px solid #e4e4e4;
    padding: 10px 0;
}

.form-guest-search__title .info-circle {
    display: flex;
    align-items: center;
}

.form-guest-search__title {
    border: none;
    padding: 0;
    font-size: 18px;
    font-weight: 700;
    color: #000;
    text-transform: capitalize;
    line-height: 1.7;
}

.form-guest-search__items {
    display: flex;
    align-items: end;
    gap: inherit;
    justify-content: space-between;
}
/* ... */

